Assistant checkpoint: Fix deprecated APIs and add type parameters
Assistant generated file changes:
- src/main/java/yaml/Yaml.java: Replace deprecated constructors with valueOf
- src/main/java/CustomChecker.java: Add type parameters to JSONArray

---

User prompt:

In the shell, I see the following:

```
] /home/runner/workspace/src/main/java/yaml/Yaml.java: /home/runner/workspace/src/main/java/yaml/Yaml.java uses or overrides a deprecated API.
[INFO] /home/runner/workspace/src/main/java/yaml/Yaml.java: Recompile with -Xlint:deprecation for details.
[INFO] /home/runner/workspace/src/main/java/yaml/Yaml.java: Some input files use or override a deprecated API that is marked for removal.
[INFO] /home/runner/workspace/src/main/java/yaml/Yaml.java: Recompile with -Xlint:removal for details.
[INFO] /home/runner/workspace/src/main/java/CustomChecker.java: /home/runner/workspace/src/main/java/CustomChecker.java uses unchecked or unsafe operations.
[INFO] /home/runner/workspace/src/main/java/CustomChecker.java: Recompile with -Xlint:unchecked for details.
```

If applicable, propose a fix immediately.